fix: update box-shadow for power button menu and adjust focus styles for better visibility

--- a/styles/power.scss
+++ b/styles/power.scss
@@ -21,7 +21,7 @@
 
 #power-button-menu {
   background-color: theme.$background;
-box-shadow: -2px 2px 10px 4px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px 2px 10px 4px rgba(0, 0, 0, 0.75);
 }
 
 #power-control-button {
@@ -44,16 +44,12 @@ box-shadow: -2px 2px 10px 4px rgba(0, 0, 0, 0.75);
   &:focus,
   &:active,
   &:hover {
-    border-color: theme.$text-main;
+    border-color: theme.$text-secondary;
     border-style: solid;
     border-width: 1px;
     background-color: #19191a;
     outline-style: none;
+    color: theme.$text-secondary;
 
-
-
-    label {
-      color: theme.$text-secondary;
-    }
   }
 }
